# wordgrid

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/: FUNDING.yml
src/: CMakeLists.txt  dictionary.cpp  dictionary.h  mode_moveattack.h  mode_timeattack.h  modes.cpp  modes.h  raylib-extras.h  raylib_game.cpp  screen_ending.cpp  screen_gameplay.cpp  screen_logo.cpp  screen_options.cpp  screen_title.cpp  screens.h
src/resources/: LICENSE  solid_spritesheet.pdn
src/resources/text/en/: distribution-scrabble.json  distribution.json  distribution.txt  words.txt
test/: CMakeLists.txt  test_main.cpp
test/resources/: dict_test_german.txt  dict_test_plain.txt
